logic to create id and hash